# lrauv

./: .gitignore  README.md
docker/: build_and_run_docker.sh  join.sh  (+3 more)
lrauv_description/: CMakeLists.txt  colcon.pkg  package.xml
lrauv_description/hooks/: hook.sh  hook.sh.in
lrauv_description/models/tethys/: model.config  model.sdf  model.sdf.in
lrauv_description/models/tethys_equiped/: model.config  model.sdf
lrauv_description/models/tethys_equipped/: model.config  model.sdf
lrauv_description/models/tethys_fsk/: model.config  model.sdf
lrauv_description/models/tethys_fsk_equipped/: model.sdf
lrauv_description/scripts/: description_generator.py
lrauv_description/test/: test_hydrostatic_stability.cc
lrauv_description/test/helper/: TestConstants.hh.in
lrauv_description/test/worlds/: flat_world.sdf  tilted_world.sdf
lrauv_gazebo_plugins/proto/: CMakeLists.txt
lrauv_gazebo_plugins/proto/lrauv_gazebo_plugins/: dvl_beam_state.proto  dvl_kinematic_estimate.proto  dvl_range_estimate.proto  dvl_tracking_target.proto  dvl_velocity_tracking.proto  lrauv_acoustic_message.proto  lrauv_command.proto  lrauv_init.proto  lrauv_internal_comms.proto  lrauv_range_bearing_request.proto  lrauv_range_bearing_response.proto  lrauv_state.proto
lrauv_gazebo_plugins/src/comms/: CMakeLists.txt  CommsPacket.cc
lrauv_ignition_plugins/: CMakeLists.txt  colcon.pkg
lrauv_ignition_plugins/data/: dummy.csv  interpolation_prism.csv  interpolation_test.csv  simple_test.csv
lrauv_ignition_plugins/example/: example_buoyancy.cc  example_comms_client.cc  example_comms_echo.cc  example_controller.cc  example_dvl_velocity.cc  example_elevator.cc  example_mass_shifter.cc  example_rudder.cc  example_spawn.cc  example_thruster.cc  keyboard_teleop.cc  multi_lrauv_acoustic_demo.cc  multi_lrauv_race.cc
lrauv_ignition_plugins/hooks/: hook.dsv.in  hook.sh  hook.sh.in
lrauv_ignition_plugins/launch/: lrauv_world.ign
lrauv_ignition_plugins/models/ABCSign/: model.config  model.sdf
lrauv_ignition_plugins/models/ABCSign_5m/: model.config  model.sdf
lrauv_ignition_plugins/models/axes/: model.config  model.sdf
lrauv_ignition_plugins/models/turbidity_generator/: model.config  model.sdf
lrauv_ignition_plugins/plots/: README.md  plot_missions.py  unserialize_for_plotting.sh
lrauv_ignition_plugins/proto/: CMakeLists.txt  dev_beam_state.proto  dvl_beam_state.proto  dvl_kinematic_estimate.proto  dvl_range_estimate.proto  dvl_tracking_target.proto  dvl_velocity_tracking.proto  lrauv_acoustic_message.proto  lrauv_command.proto  lrauv_dvl_message.proto  lrauv_init.proto  lrauv_internal_comms.proto  lrauv_range_bearing_request.proto  lrauv_range_bearing_response.proto  lrauv_range_bearing_response_internal.proto  lrauv_state.proto
lrauv_ignition_plugins/proto/lrauv_ignition_plugins/: dvl_beam_state.proto  dvl_kinematic_estimate.proto  dvl_range_estimate.proto  dvl_tracking_target.proto  dvl_velocity_tracking.proto  lrauv_init.proto  lrauv_internal_comms.proto  lrauv_range_bearing_response.proto  lrauv_state.proto
lrauv_ignition_plugins/scripts/: make_dem_utm_tiles.py  utm_tiles_to_decdeg.py
lrauv_ignition_plugins/src/: AcousticCommsPlugin.cc  AcousticCommsPlugin.hh  BuoyancyEnginePlugin.cc  BuoyancyEnginePlugin.hh  ControlPanelPlugin.cc  ControlPanelPlugin.hh  ControlPanelPlugin.qml  ControlPanelPlugin.qrc  DVLSystem.cc  DVLSystem.hh  DopplerVelocityLog.cc  DopplerVelocityLog.hh  DopplerVelocityLogSystem.cc  DopplerVelocityLogSystem.hh  FinLiftDragPlugin.cc  FinLiftDragPlugin.hh  HydrodynamicsPlugin.cc  HydrodynamicsPlugin.hh  Interpolation.hh  Interpolation_TEST.cc  JointPositionPlugin.cc  JointPositionPlugin.hh  LookupSensor.hh  PointCloudIterator.hh  RangeBearingPlugin.cc  RangeBearingPlugin.hh  ReferenceAxis.cc  ReferenceAxis.hh  ReferenceAxis.qml  ScienceSensorsSystem.cc  ScienceSensorsSystem.hh  SpawnPanelPlugin.cc  SpawnPanelPlugin.hh  SpawnPanelPlugin.qml  SpawnPanelPlugin.qrc  TethysCommPlugin.cc  TethysCommPlugin.hh  ThrusterPlugin.cc  ThrusterPlugin.hh  TimeAnalysisPlugin.cc  (+11 more)
lrauv_ignition_plugins/src/comms/: CMakeLists.txt  CommsPacket.cc
lrauv_ignition_plugins/src/control_panel/: ControlPanelPlugin.hh  ControlPanelPlugin.qml
lrauv_ignition_plugins/src/dvl/: DVLSensor.cc  DVLSensor.hh
lrauv_ignition_plugins/test/: dumb_controller.cc  keyboard_teleop.cc  multi_lrauv_race.cc  teleop.cc  test_acoustic_comms_orientation.cc  test_ahrs.cc  test_buoyancy.cc  test_buoyancy_action.cc  test_comms.cc  test_controller.cc  test_drop_weight.cc  test_elevator.cc  test_hydrodynamics_equilbrium_vel.cc  test_hydrodynamics_equilibrium_velocity.cc  test_mass_shifter.cc  test_mission_depth_vbs.cc  test_mission_pitch_and_depth_mass_vbs.cc  test_mission_pitch_mass.cc  test_mission_yoyo_circle.cc  test_range_bearing.cc  test_rudder.cc  test_sensor.cc  test_spawn.cc  test_state_msg.cc
lrauv_ignition_plugins/worlds/: acoustic_comms_test.sdf  buoyant_tethys.sdf  buoyant_tethys_at_depth.sdf  dvl_at_portuguese_ledge.sdf.em  empty_environment.sdf  empty_environment_with_tiles.sdf.em  empy_expander.py  multi_lrauv.sdf  multi_lrauv_acoustic_demo.sdf  portuguese_ledge.py  portuguese_ledge.sdf  portuguese_ledge.sdf.em  star_world.sdf  tethys_acoustic_comms_test.sdf  tethys_comm.sdf  windy_world.sdf  windy_world_at_depth.sdf
lrauv_system_tests/: CMakeLists.txt  colcon.pkg  package.xml
lrauv_system_tests/data/: minimal_time_varying.csv
lrauv_system_tests/include/: TestConstants.hh.in
lrauv_system_tests/src/: LRAUVController.cc  ModelManipulator.cc  ModelObserver.cc  Publisher.cc
lrauv_system_tests/test/: CMakeLists.txt
lrauv_system_tests/worlds/: acoustic_comms_fixture.sdf  acoustic_comms_multi_vehicle.sdf  bottomless_pit.sdf  buoyant_tethys.sdf  buoyant_tethys_at_depth.sdf  buoyant_tethys_half_battery.sdf  buoyant_tethys_low_battery.sdf  empty_environment.sdf  flat_seabed.sdf  flat_seabed_two_vehicles.sdf  flat_tethys_no_damping.sdf  sea_bottom_world.sdf  star_world.sdf  static_buoyant_tethys.sdf  tilted_tethys_no_damping.sdf  underwater_currents.sdf  windy_tethys.sdf  windy_tethys_at_depth.sdf
(+167 files in other folders)
